--- a/Paraview/Lariat/Lariat Track Movie.ipynb
+++ b/Paraview/Lariat/Lariat Track Movie.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!! Not complete !!"
+    "Final as of 9/27/2015 v1.1"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jim has code (see link above) that can write out event data from Lariat from one event (for now). He generates comma-separated-value files (`.csv`) with this data. I have a script `convertCSV.py` that converts the csv file into VTK PolyData and writes that out to a `.vtp` file that ParaView can load directly. Each row of the csv must contain a 3-D position $(x,y,z)$ and then additional columns of metadata that can be integers, floats, or strings. The script will automatically create vectors out of neighboring columns whose titles end in `x`, `y`, `z`. For example, three columns in a row named `px, py, pz` will be turned into a vector called `p`. Other column metadata are turned into scalars. The script associates the metadata with each point. Each point is also a `VTK_VERTEX` cell, but the cell has no metadata (the ParaView `Point Data To Cell Data` filter can copy the point data to the cells if they are needed). "
+    "JimK has code (see link above) that can write out event data from Lariat from one event (for now). He generates comma-separated-value files (`.csv`) with this data. I have a script `convertCSV.py` that converts the csv file into VTK PolyData and writes that out to a `.vtp` file that ParaView can load directly. Each row of the csv must contain a 3-D position $(x,y,z)$ and then additional columns of attributes that can be integers, floats, or strings. The script will automatically create vectors out of neighboring columns whose titles end in `x`, `y`, `z`. For example, three columns in a row named `px, py, pz` will be turned into a vector called `p`. Other column attributes are turned into scalars. The script associates the attributes with each point. Each point is also a `VTK_VERTEX` cell, but the cell has no attributes (the ParaView `Point Data To Cell Data` filter can copy the point data to the cells if they are needed). "
    ]
   },
   {
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first look at some basic hit & track information. Jim has a file called `output_po.csv` containing hits and metadata."
+    "Let's first look at some basic hit & track information. Jim has a file called `output_po.csv` containing hits and attributes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -340,11 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movies/pomovie_1.mp4 movies/pomovie_1.ogv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -354,7 +361,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The picture above is a blow up of the region where the tracks cross. You can see the directional information in the arrows. Interesting that for some tracks, `pmtrack` and `costrk` are aligned and for tothers they are opposite. "
+    "The picture above is a blow up of the region where the tracks cross. You can see the directional information in the arrows. Interesting that for some tracks, `pmtrack` and `costrk` are aligned and for others they are opposite. "
    ]
   },
   {
@@ -1796,7 +1803,8 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1822,6 +1830,13 @@
    ],
    "source": [
     "paraviewAnimation(\"state/htpmmovie_1.pvsm\", frameRate=20, plugin=geantToVtkPluginLocation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So this animation is very misleading. The revealing of the tracks is **not** how they propagated in the detector, but in fact is merely showing which hits are closer to the wires. Working with Brian and JimK to find a better way."
    ]
   }
  ],
