--- a/Paraview/Lariat/Lariat Track Movie.ipynb
+++ b/Paraview/Lariat/Lariat Track Movie.ipynb
@@ -53,7 +53,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "init_cell": false
    },
    "outputs": [
     {
