Added a little more text

--- a/g-2/survey/survey.ipynb
+++ b/g-2/survey/survey.ipynb
@@ -228,6 +228,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many total responses?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current developer? Future developer? Non-developer? Didn't say (anonynmous)?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 222,
    "metadata": {
@@ -251,28 +287,6 @@
    ],
    "source": [
     "r[\"User\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(r)"
    ]
   },
   {
@@ -348,6 +362,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strong yes? Yes? Neutral? No? Strong no? Don't understand (??), Abstain?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 146,
    "metadata": {
@@ -373,6 +394,13 @@
    ],
    "source": [
     "r.AdoptCMSStyle.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Separate out responses by developer type..."
    ]
   },
   {
@@ -434,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make the responses shorter. "
+    "Make the responses shorter... "
    ]
   },
   {
@@ -462,6 +490,13 @@
     "    e = e.replace(\"Something else (fill in comments below)\", \"Something else\")\n",
     "    e = e.replace(\"I have an SLF6/CENTOS6 laptop and I can run CVMFS\", \"Centos6-Native\")\n",
     "    r.Laptop[i] = e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall responses..."
    ]
   },
   {
@@ -496,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot everyone..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 201,
    "metadata": {
@@ -526,6 +568,13 @@
    "source": [
     "sns.countplot(y=\"Laptop\", order=r.Laptop.value_counts().index, data=r)\n",
     "plt.title(\"All Users\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are the responses from current developers..."
    ]
   },
   {
@@ -566,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And for future users..."
+    "And for future developers..."
    ]
   },
   {
